View Issue Details

IDProjectCategoryView StatusLast Update
0032654Open CASCADEOCCT:Data Exchangepublic2023-02-03 05:08
Reporterkgv Assigned Toinv 
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.6.0 
Target Version7.6.1Fixed in Version7.7.0 
Summary0032654: Data Exchange - fix misprint in RWGltf_TriangulationReader::readDracoBuffer()
DescriptionRWGltf_TriangulationReader::readDracoBuffer() has a misprint with missing "break" in handling RWGltf_GltfArrayType_Position.
Steps To Reproduce
pload XDE MODELING VISUALIZATION
readgltf s bug32654_spheres_draco.glb
vinit View1
vfront
vdisplay -dispMode 1 s
vfit

TagsNo tags attached.
Test case numberN/A

Attached Files

  • bug32654_spheres_draco.glb (75,060 bytes)
  • spheres_KO.png (14,090 bytes)
  • spheres_OK.png (66,084 bytes)

Relationships

related to 0032526 newbugmaster Tests - add Draco-compressed glTF file samples 
child of 0032525 closedbugmaster Data Exchange, RWGltf_CafReader - support KHR_draco_mesh_compression 

Activities

kgv

2021-11-10 12:31

developer  

bug32654_spheres_draco.glb (75,060 bytes)

kgv

2021-11-10 12:34

developer  

spheres_KO.png (14,090 bytes)

kgv

2021-11-10 12:34

developer  

spheres_OK.png (66,084 bytes)

git

2021-11-10 12:39

administrator   ~0105079

Branch CR32654 has been created by kgv.

SHA-1: cb369e4f7103e5d2e93bff2ecd9dcfd35183dfc5


Detailed log of new commits:

Author: kgv
Date: Wed Nov 10 12:38:56 2021 +0300

    0032654: Data Exchange - fix misprint in RWGltf_TriangulationReader::readDracoBuffer()
    
    Added missing break.
    Fixes reading of glTF files with Normal attributes preceding Position
    (and eliminates redundant / erroneous copy when Position attributes precede Normal).

kgv

2021-11-10 12:39

developer   ~0105080

Please raise the patch
- OCCT: branch CR32654.

bugmaster

2021-11-21 12:32

administrator   ~0105294

Combination -
OCCT branch : IR-2021-11-19
master SHA - ea0ffd6efe2e05d9764495fa0a877ab75ab5f4e9
49e51745631c52b6c452c65adae4d6dfa21a1b1e
Products branch : IR-2021-11-19 SHA - 24ac02cc67913557271bc70687b86b53e78f9c44
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17763.090000000444 / 17742.320000000425 [+0.12%]
Products
Total CPU difference: 11658.550000000125 / 11669.660000000133 [-0.10%]
Windows-64-VC14:
OCCT
Total CPU difference: 19745.71875 / 19762.140625 [-0.08%]
Products
Total CPU difference: 13066.0625 / 12843.21875 [+1.74%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-12-13 14:56

administrator   ~0105885

Branch CR32654 has been deleted by kgv.

SHA-1: cb369e4f7103e5d2e93bff2ecd9dcfd35183dfc5

Related Changesets

occt: master 2b40ee81

2021-11-10 09:38:56

kgv


Committer: inv Details Diff
0032654: Data Exchange - fix misprint in RWGltf_TriangulationReader::readDracoBuffer()

Added missing break.
Fixes reading of glTF files with Normal attributes preceding Position
(and eliminates redundant / erroneous copy when Position attributes precede Normal).
Affected Issues
0032654
mod - src/RWGltf/RWGltf_TriangulationReader.cxx Diff File

Issue History

Date Modified Username Field Change
2021-11-10 12:22 kgv New Issue
2021-11-10 12:22 kgv Assigned To => kgv
2021-11-10 12:23 kgv Relationship added child of 0032525
2021-11-10 12:31 kgv File Added: bug32654_spheres_draco.glb
2021-11-10 12:32 kgv Test case number => N/A
2021-11-10 12:32 kgv Steps to Reproduce Updated
2021-11-10 12:33 kgv Steps to Reproduce Updated
2021-11-10 12:34 kgv File Added: spheres_KO.png
2021-11-10 12:34 kgv File Added: spheres_OK.png
2021-11-10 12:39 git Note Added: 0105079
2021-11-10 12:39 kgv Note Added: 0105080
2021-11-10 12:39 kgv Assigned To kgv => bugmaster
2021-11-10 12:39 kgv Severity minor => trivial
2021-11-10 12:39 kgv Status new => resolved
2021-11-10 12:39 kgv Relationship added related to 0032526
2021-11-10 18:21 kgv Status resolved => reviewed
2021-11-21 12:27 bugmaster Status reviewed => tested
2021-11-21 12:32 bugmaster Note Added: 0105294
2021-11-21 12:46 inv Changeset attached => occt master 2b40ee81
2021-11-21 12:46 inv Assigned To bugmaster => inv
2021-11-21 12:46 inv Status tested => verified
2021-11-21 12:46 inv Resolution open => fixed
2021-12-13 14:56 git Note Added: 0105885
2023-02-03 05:08 vglukhik Status verified => closed
2023-02-03 05:08 vglukhik Fixed in Version => 7.7.0