0032654: Data Exchange - fix misprint in RWGltf_TriangulationReader::readDracoBuffer()

Added missing break.
Fixes reading of glTF files with Normal attributes preceding Position
(and eliminates redundant / erroneous copy when Position attributes precede Normal).